# exaSpim-UI

./: .gitignore  .pdm-python  EXASPIM.lnk  README.md  START_EXASPIM_UI.cmd  egrabber-23.08.0.17-py2.py3-none-any.whl  ni_pulse_test.py  pyproject.toml
data/: data_description.json  exaSPIM_acquisition.json  metadata.nd.json  procedures.json  process_output.json  processing.json  processing_manifest.json  subject.json
doc/: install_checklist.md
doc/.obsidian/: workspace.json
src/exaspim_main/: main.py  userinterface.py
src/exaspim_main/config/: config.toml  config.yaml
src/exaspim_main/config/backups/: config.yaml
src/exaspim_main/widgets/: instrument_parameters.py  lasers.py  livestream.py  tissue_map.py  volumeteric_acquisition.py  widget_base.py
